Fixed bug: Unresponsive Header
Fixed two bugs:

1. There was a small spot between the link to a page and the links to
its children that when hovered over would make the children disappear.
This has been fixed by making the invisible box larger.

2. When clicking one of the child pages' links the menu for these links
would be stuck in the lower parts of the page that loaded. This was
simply a CSS bug, fixed.

--- a/css/general.css
+++ b/css/general.css
@@ -29,11 +29,21 @@ body {
 }
 
 ::-moz-selection {
+	background-color: none;
+	color: inherit;
+}
+ 
+::selection {
+	background-color: none;
+	color: inherit;
+}
+
+article ::-moz-selection {
 	background-color: #C97F7F;
 	color: #fff;
 }
  
-::selection {
+article ::selection {
 	background-color: #C97F7F;
 	color: #fff;
 }
